# TSPGenetic

./: .gitignore  CMakeLists.txt  berlin52_best_tour_to_date.txt  bier127  calculate_mean_error.py  compile.bash  compile_and_run.bash  compile_gpp.bash  data.txt  data2.txt  draw_path.py  grid_search.txt  losuj_instancje_poczatkowa.py  plot_data.py  plot_path.py  punkty.txt  run.bash  run_for_all_instances.bash  run_tests.bash  stats.txt  stats_pop=10000_mut=0.010000_cross=0.500000.txt  stats_pop=1000_mut=0.010000_cross=0.100000.txt  stats_pop=1000_mut=0.010000_cross=0.700000.txt  stats_pop=1000_mut=0.090000_cross=0.010000.txt  stats_pop=1000_mut=0.100000_cross=0.100000.txt  stats_pop=100_mut=0.010000_cross=0.700000.txt  tsp1000
datasets/: a280.txt  att48.results  berlin52.results  berlin52.txt  bier127.results  bier127.txt  brd14051.txt  ch130.txt  d493.txt  tsp1000.results  tsp250.results
include/: 2opt.h  ExampleOperators.h  GASettings.h  GeneticAlgorithm.h  TSPOperators.h  generateInitialPopulation.h  greedy.h  math_helpers.h  optimal_path.h  preProcess.h
plots/: epochs=1000 stats_pop=100_mut=0.010000_cross=0.100000.txt  epochs=10000 stats_pop=100_mut=0.010000_cross=0.100000.txt  stats_epochs=10000_pop=1000_mut=0.010000_cross=0.010000.txt  stats_epochs=10000_pop=1000_mut=0.100000_cross=0.010000.txt  stats_epochs=10000_pop=1000_mut=0.250000_cross=0.010000.txt  stats_epochs=10000_pop=100_mut=0.010000_cross=0.010000.txt  stats_epochs=1000_elitism=1_pop=1000_mut=0.100000_cross=0.100000.txt  stats_epochs=10_elitism=1_pop=100_mut=0.010000_cross=0.700000.txt  (+6 more)
(+1 files in other folders)
